--- a/CloudWatchLog.yml
+++ b/CloudWatchLog.yml
@@ -13,7 +13,7 @@
           state: present
           update_cache: yes
       - name: empty existing file
-        command: "{{item}}"
+        command: {{item}}
         with_items:
           - echo "" > /etc/awslogs/awscli.conf
           - echo "" > /etc/awslogs/awslogs.conf
